# solidity-analyzer

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
client/: .vscodeignore  package.json  pnpm-lock.yaml  tsconfig.json
client/src/: extension.ts
src/: backend.rs  lib.rs  server.rs  utils.rs
src/features/: document_symbols.rs  fmt.rs  mod.rs
src/solang/: document_symbol.rs  mod.rs
