[package]
name = "solidity-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
tower-lsp = "0.19.0"
ethers-solc = { version = "2.0.8", features = ["full"] }
foundry-config = { git = "https://github.com/meetmangukiya/foundry", version = "0.2.0", branch = "find-project-root-path-arg" }
forge-fmt = { git = "https://github.com/meetmangukiya/foundry", version = "0.2.0", branch = "find-project-root-path-arg" }
anyhow = "1.0.72"
similar = "2.2.1"
thiserror = "1.0.44"
