[package]
name = "solidity-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
tower-lsp = "0.19.0"
foundry-config = { git = "https://github.com/foundry-rs/foundry", version = "0.2.0" }
forge-fmt = { git = "https://github.com/foundry-rs/foundry", version = "0.2.0" }
anyhow = "1.0.72"
similar = "2.2.1"
thiserror = "1.0.44"
dashmap = "5.5.0"
solang-parser = "0.3.1"
serde_json = "1.0.103"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
foundry-compilers = "0.4.1"
